--- a/src/views/admin/banner.ejs
+++ b/src/views/admin/banner.ejs
@@ -100,119 +100,6 @@
 <!-- //////////////////////////////////////////////////////////////////////////// --> 
 <!-- //////////////////////////////////////////////////////////////////////////// --> 
 
-
-<!-- ================================================
-jQuery Library
-================================================ -->
-<script src="js/jquery.min.js"></script>
-
-<!-- ================================================
-Bootstrap Core JavaScript File
-================================================ -->
-<script src="js/bootstrap/bootstrap.min.js"></script>
-
-<!-- ================================================
-Plugin.js - Some Specific JS codes for Plugin Settings
-================================================ -->
-<script src="js/plugins.js"></script>
-
-<!-- ================================================
-Bootstrap Select
-================================================ -->
-<script src="js/bootstrap-select/bootstrap-select.js"></script>
-
-<!-- ================================================
-Bootstrap Toggle
-================================================ -->
-<script src="js/bootstrap-toggle/bootstrap-toggle.min.js"></script>
-
-<!-- ================================================
-Bootstrap WYSIHTML5
-================================================ -->
-<!-- main file -->
-<script src="js/bootstrap-wysihtml5/wysihtml5-0.3.0.min.js"></script>
-<!-- bootstrap file -->
-<script src="js/bootstrap-wysihtml5/bootstrap-wysihtml5.js"></script>
-
-<!-- ================================================
-Summernote
-================================================ -->
-<script src="js/summernote/summernote.min.js"></script>
-
-<!-- ================================================
-Flot Chart
-================================================ -->
-<!-- main file -->
-<script src="js/flot-chart/flot-chart.js"></script>
-<!-- time.js -->
-<script src="js/flot-chart/flot-chart-time.js"></script>
-<!-- stack.js -->
-<script src="js/flot-chart/flot-chart-stack.js"></script>
-<!-- pie.js -->
-<script src="js/flot-chart/flot-chart-pie.js"></script>
-<!-- demo codes -->
-<script src="js/flot-chart/flot-chart-plugin.js"></script>
-
-<!-- ================================================
-Chartist
-================================================ -->
-<!-- main file -->
-<script src="js/chartist/chartist.js"></script>
-<!-- demo codes -->
-<script src="js/chartist/chartist-plugin.js"></script>
-
-<!-- ================================================
-Easy Pie Chart
-================================================ -->
-<!-- main file -->
-<script src="js/easypiechart/easypiechart.js"></script>
-<!-- demo codes -->
-<script src="js/easypiechart/easypiechart-plugin.js"></script>
-
-<!-- ================================================
-Rickshaw
-================================================ -->
-<!-- d3 -->
-<script src="js/rickshaw/d3.v3.js"></script>
-<!-- main file -->
-<script src="js/rickshaw/rickshaw.js"></script>
-<!-- demo codes -->
-<script src="js/rickshaw/rickshaw-plugin.js"></script>
-
-<!-- ================================================
-Data Tables
-================================================ -->
-<script src="js/datatables/datatables.min.js"></script>
-
-<!-- ================================================
-Sweet Alert
-================================================ -->
-<script src="js/sweet-alert/sweet-alert.min.js"></script>
-
-<!-- ================================================
-Kode Alert
-================================================ -->
-<script src="js/kode-alert/main.js"></script>
-
-<!-- ================================================
-jQuery UI
-================================================ -->
-<script src="js/jquery-ui/jquery-ui.min.js"></script>
-
-<!-- ================================================
-Moment.js
-================================================ -->
-<script src="js/moment/moment.min.js"></script>
-
-<!-- ================================================
-Full Calendar
-================================================ -->
-<script src="js/full-calendar/fullcalendar.js"></script>
-
-<!-- ================================================
-Bootstrap Date Range Picker
-================================================ -->
-<script src="js/date-range-picker/daterangepicker.js"></script>
-
+<%- include('layouts/javascript') %>
 </body>
 </html>
