--- a/src/views/admin/layouts/header.ejs
+++ b/src/views/admin/layouts/header.ejs
@@ -20,7 +20,7 @@
         <ul class="top-right">
     
         <li class="dropdown link">
-          <a href="#" data-toggle="dropdown" class="dropdown-toggle profilebox"><img src="img/profileimg.png" alt="img"><b>Jonathan Doe</b><span class="caret"></span></a>
+          <a href="#" data-toggle="dropdown" class="dropdown-toggle profilebox"><img src="/admin/img/profileimg.png" alt="img"><b>Jonathan Doe</b><span class="caret"></span></a>
             <ul class="dropdown-menu dropdown-menu-list dropdown-menu-right">
               <li role="presentation" class="dropdown-header">Profile</li>
               <!-- <li><a href="#"><i class="fa falist fa-inbox"></i>Inbox<span class="badge label-danger">4</span></a></li> -->
