--- a/src/views/admin/layouts/javascript.ejs
+++ b/src/views/admin/layouts/javascript.ejs
@@ -1,1 +1,129 @@
-<script src="/user/js"></script>
+
+
+<script src="/admin/js/jquery.min.js"></script>
+
+<!-- ================================================
+Bootstrap Core JavaScript File
+================================================ -->
+<script src="/admin/js/bootstrap/bootstrap.min.js"></script>
+
+<!-- ================================================
+Plugin.js - Some Specific JS codes for Plugin Settings
+================================================ -->
+<script src="/admin/js/plugins.js"></script>
+
+<!-- ================================================
+Data Tables
+================================================ -->
+<script src="/admin/js/datatables/datatables.min.js"></script>
+
+<script src="/admin/js/bootstrap-select/bootstrap-select.js"></script>
+
+<!-- ================================================
+Bootstrap Toggle
+================================================ -->
+<script src="/admin/js/bootstrap-toggle/bootstrap-toggle.min.js"></script>
+
+<!-- ================================================
+Moment.js
+================================================ -->
+<script src="/admin/js/moment/moment.min.js"></script>
+
+<!-- ================================================
+Bootstrap Date Range Picker
+================================================ -->
+<script src="/admin/js/date-range-picker/daterangepicker.js"></script>
+
+
+
+<script>
+$(document).ready(function() {
+    $('#example0').DataTable();
+} );
+</script>
+
+
+
+<script>
+$(document).ready(function() {
+  var userId;
+    var deleteForm = document.forms['delete-user-form'];
+    var btnDeleteUser = document.getElementById('btn-delete-user');
+    $('#example0').DataTable();
+    var table = $('#example').DataTable({
+        "columnDefs": [
+            { "visible": false, "targets": 2 }
+        ],
+        "order": [[ 2, 'asc' ]],
+        "displayLength": 25,
+        "drawCallback": function ( settings ) {
+            var api = this.api();
+            var rows = api.rows( {page:'current'} ).nodes();
+            var last=null;
+ 
+            api.column(2, {page:'current'} ).data().each( function ( group, i ) {
+                if ( last !== group ) {
+                    $(rows).eq( i ).before(
+                        '<tr class="group"><td colspan="5">'+group+'</td></tr>'
+                    );
+                    last = group;
+                }
+            } );
+        }
+    } );
+
+    //When dialog confirm clicked
+    $('#delete-user-modal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            userId = button.data('id');
+    });
+    
+    //When delete user btn clicked
+    btnDeleteUser.onclick = function () {
+            deleteForm.action = '/admin/user/' + userId + '?_method=DELETE';
+            deleteForm.submit();
+        };
+
+
+    // Order by the grouping
+    $('#example tbody').on( 'click', 'tr.group', function () {
+        var currentOrder = table.order()[0];
+        if ( currentOrder[0] === 2 && currentOrder[1] === 'asc' ) {
+            table.order( [ 2, 'desc' ] ).draw();
+        }
+        else {
+            table.order( [ 2, 'asc' ] ).draw();
+        }
+    } );
+} );
+</script>
+
+<script>
+    $(document).ready(function() {
+      $('#date-range-picker').daterangepicker(null, function(start, end, label) {
+        console.log(start.toISOString(), end.toISOString(), label);
+      });
+    });
+    </script>
+    
+    <!-- Basic Single Date Picker -->
+    <script>
+    $(document).ready(function() {
+      $('#date-picker').daterangepicker({ singleDatePicker: true }, function(start, end, label) {
+        console.log(start.toISOString(), end.toISOString(), label);
+      });
+    });
+    </script>
+    
+    <!-- Date Range and Time Picker -->
+    <script>
+    $(document).ready(function() {
+      $('#date-range-and-time-picker').daterangepicker({
+        timePicker: true,
+        timePickerIncrement: 30,
+        format: 'MM/DD/YYYY h:mm A'
+      }, function(start, end, label) {
+        console.log(start.toISOString(), end.toISOString(), label);
+      });
+    });
+    </script>
