--- a/src/views/admin/layouts/loading.ejs
+++ b/src/views/admin/layouts/loading.ejs
@@ -1,1 +1,1 @@
-<div class="loading"><img src="img/loading.gif" alt="loading-img"></div>
+<div class="loading"><img src="/admin/img/loading.gif" alt="loading-img"></div>
