--- a/src/views/admin/edit-book.ejs
+++ b/src/views/admin/edit-book.ejs
@@ -12,6 +12,9 @@
     
   </head>
   <body>
+        <!-- Start Page Loading -->
+  <%- include('layouts/loading') %>
+  <!-- End Page Loading -->
  <!-- //////////////////////////////////////////////////////////////////////////// --> 
   <!-- START HEADER -->
   <%- include('layouts/header') %>
@@ -23,18 +26,16 @@
 <!-- START SIDEBAR -->
 <%- include('layouts/sidebar') %>
 <!-- END SIDEBAR -->
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
-
  <!-- //////////////////////////////////////////////////////////////////////////// --> 
 <!-- START CONTENT -->
 <div class="content">
 
   <!-- Start Page Header -->
   <div class="page-header">
-    <h1 class="title">Thêm tài khoản</h1>
+    <h1 class="title">Sửa sách</h1>
   
     <div class="right">
-        <a href="/admin/user"><button class="btn btn-info btn-lg" >Quay lại</button></a>
+        <a href="/admin/book"><button class="btn btn-info btn-lg" >Quay lại</button></a>
       </div>
   </div>
   <!-- End Page Header -->
@@ -48,35 +49,32 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-body">
-            <form class="form-horizontal" action="/admin/create-user" method="POST">
+            <form class="form-horizontal" action="/admin/book/<%- books._id %>?_method=PUT" method="POST">
 
                 <div class="form-group">
-                <label class="col-sm-2 control-label form-label" for="username">Username</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username" name="username">
+                    <label class="col-sm-2 control-label form-label" for="book_name">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" value="<%- books.book_name %>" id="book_name" name="book_name">
+                    </div>
                 </div>
-                </div>
-
                 <div class="form-group">
-                <label class="col-sm-2 control-label form-label" for="displayName">Display Name</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="displayName" name="displayName">
-                </div>
-                </div>
+                    <label class="col-sm-2 control-label form-label">Category</label>
+                      <div class="col-sm-10">
+                        <select class="selectpicker" multiple data-live-search="true" name="category">
+                            <% categories.forEach(category =>{%>
+                                <option value="<%- category._id %>" class="<%- category._id %>" <%- arrID.some(function (cate) {
+                                    return cate.equals(category._id);
+                                }) && 'selected' %> > <%- category.name %></option>
+                            <% })%>
+                        </select>
 
+                    </div>
+                </div>
                 <div class="form-group">
-                <label class="col-sm-2 control-label form-label" for="password">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="password" name="password">
-                </div>
-                </div>
-                
-                <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Create</button>
-                </div>
-                </div>
-
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-success">Submit</button>
+                    </div>
+                    </div>
             </form>
 
             </div>
