--- a/src/views/admin/edit-user.ejs
+++ b/src/views/admin/edit-user.ejs
@@ -23,15 +23,13 @@
 <!-- START SIDEBAR -->
 <%- include('layouts/sidebar') %>
 <!-- END SIDEBAR -->
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
-
  <!-- //////////////////////////////////////////////////////////////////////////// --> 
 <!-- START CONTENT -->
 <div class="content">
 
   <!-- Start Page Header -->
   <div class="page-header">
-    <h1 class="title">Thêm tài khoản</h1>
+    <h1 class="title">Sửa tài khoản</h1>
   
     <div class="right">
         <a href="/admin/user"><button class="btn btn-info btn-lg" >Quay lại</button></a>
@@ -48,32 +46,31 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-body">
-            <form class="form-horizontal" action="/admin/create-user" method="POST">
+            <form class="form-horizontal" action="/admin/user/<%- users._id %>?_method=PUT" method="POST">
 
+                <div class="form-group">
+                    <label class="col-sm-2 control-label form-label" for="email">Email</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" value="<%- users.email %>" id="email" name="email">
+                    </div>
+                    </div>
                 <div class="form-group">
                 <label class="col-sm-2 control-label form-label" for="username">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username" name="username">
+                    <input type="text" class="form-control" value="<%- users.profile.username %>" id="username" name="username">
                 </div>
                 </div>
 
                 <div class="form-group">
-                <label class="col-sm-2 control-label form-label" for="displayName">Display Name</label>
+                <label class="col-sm-2 control-label form-label" for="full_name">Display Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="displayName" name="displayName">
-                </div>
-                </div>
-
-                <div class="form-group">
-                <label class="col-sm-2 control-label form-label" for="password">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="password" name="password">
+                    <input type="text" class="form-control" value="<%- users.profile.full_name %>" id="full_name" name="full_name">
                 </div>
                 </div>
                 
                 <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Create</button>
+                    <button type="submit" class="btn btn-success">Submit</button>
                 </div>
                 </div>
 
