--- a/src/views/user/blog-list.ejs
+++ b/src/views/user/blog-list.ejs
@@ -21,6 +21,7 @@
 	<meta name="format-detection" content="telephone-no">
     
     <%- include('layouts/head') %>
+    <link rel="stylesheet" href="/user/css/blog.css">
 
 </head>
 <body>
@@ -62,51 +63,11 @@
                 <div class="row">
                     <div class="col-md-9 col-sm-12 col-xs-12">
                         <div class="blog-item-style-1 blog-item-style-3">
-                            <img src="/user/images/uploads/bloglist-it1.jpg" alt="">
-                            <div class="blog-it-infor">
+                            <!-- <img src="/user/images/uploads/bloglist-it1.jpg" alt=""> -->
+                            <div class="blog-it-infor custom-blog-card">
                                 <h3><a href="blogdetail.html">Godzilla: King Of The Monsters Adds O’Shea Jackson Jr</a></h3>
+                                <p>Người đăng: <a href="">Le Duc Tung</a></p>
                                 <span class="time">27 Mar 2017</span>
-                                <p>Africa's burgeoning animation scene got a boost this week with the announcement of an ambitious new partnership that will pair rising talents from across the continent ...</p>
-                            </div>
-                        </div>
-                        <div class="blog-item-style-1 blog-item-style-3">
-                            <img src="/user/images/uploads/bloglist-it2.jpg" alt="">
-                            <div class="blog-it-infor">
-                                <h3><a href="blogdetail.html">Magnolia Nabs ‘Lucky’ Starring Harry Dean Stanton</a></h3>
-                                <span class="time">27 Mar 2017</span>
-                                <p>Magnolia Pictures has acquired U.S. and international rights to the comedic drama Lucky John Carroll Lynch’s directorial debut. Lynch is an in-demand character actor who ...</p>
-                            </div>
-                        </div>
-                        <div class="blog-item-style-1 blog-item-style-3">
-                            <img src="/user/images/uploads/bloglist-it3.jpg" alt="">
-                            <div class="blog-it-infor">
-                                <h3><a href="blogdetail.html">‘Going in Style’ Tops ‘Smurfs: The Lost Village’ at Thursday Box Office</a></h3>
-                                <span class="time">27 Mar 2017</span>
-                                <p>New Line’s remake of “Going in Style” launched with a moderate $600,000 on Thursday night, while Sony’s animated “Smurfs: The Lost Village” debuted with $375,000 ...</p>
-                            </div>
-                        </div>
-                        <div class="blog-item-style-1 blog-item-style-3">
-                            <img src="/user/images/uploads/bloglist-it4.jpg" alt="">
-                            <div class="blog-it-infor">
-                                <h3><a href="blogdetail.html">India’s National Film Awards: ‘Kaasav’ Wins Best Picture</a></h3>
-                                <span class="time">27 Mar 2017</span>
-                                <p>Although it sporadically errs on the side of sentimentality and simplification, "The Case for Christ" sustains interest, and even generates mild suspense ...</p>
-                            </div>
-                        </div>
-                        <div class="blog-item-style-1 blog-item-style-3">
-                            <img src="/user/images/uploads/bloglist-it5.jpg" alt="">
-                            <div class="blog-it-infor">
-                                <h3><a href="blogdetail.html">‘Kong: Skull Island’ Tops $500 Million at Worldwide Box Office</a></h3>
-                                <span class="time">27 Mar 2017</span>
-                                <p>King Kong is still a box office giant. “Kong: Skull Island” has crossed the $500 million mark at the worldwide box office. It’s the third 2017 title to hit the milestone after Disney’s ...</p>
-                            </div>
-                        </div>
-                        <div class="blog-item-style-1 blog-item-style-3">
-                            <img src="/user/images/uploads/bloglist-it6.jpg" alt="">
-                            <div class="blog-it-infor">
-                                <h3><a href="blogdetail.html">Film Review: ‘Aftermath’</a></h3>
-                                <span class="time">27 Mar 2017</span>
-                                <p>"Aftermath" is a plane crash movie without a plane crash. Instead, the closest we get is a scene set in the control tower, where a computer screen shows two ...</p>
                             </div>
                         </div>
                         <ul class="pagination">
